// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelmChartDetails /> before getChartDetails resolves renders 1`] = `
<body>
  <div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
  <div
    class="Animate slide-right Drawer HelmChartDetails right enter"
    style="--size: 725px; --enter-duration: 100ms; --leave-duration: 100ms;"
  >
    <div
      class="drawer-wrapper flex column"
    >
      <div
        class="drawer-title flex align-center"
      >
        <div
          class="drawer-title-text flex gaps align-center"
        >
          Chart: a galaxy far far away/a name
          <i
            class="Icon material interactive focusable"
            id="tooltip_target_1"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="content_copy"
            >
              content_copy
            </span>
            <div />
          </i>
        </div>
        <i
          class="Icon material interactive focusable"
          id="tooltip_target_2"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="close"
          >
            close
          </span>
          <div />
        </i>
      </div>
      <div
        class="drawer-content flex column box grow"
      >
        <div
          class="Spinner singleColor center"
        />
      </div>
    </div>
    <div
      class="ResizingAnchor horizontal leading"
    />
  </div>
</body>
`;

exports[`<HelmChartDetails /> before getChartDetails resolves when getChartDetails resolves with one version renders 1`] = `
<body>
  <div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
  <div
    class="Animate slide-right Drawer HelmChartDetails right enter"
    style="--size: 725px; --enter-duration: 100ms; --leave-duration: 100ms;"
  >
    <div
      class="drawer-wrapper flex column"
    >
      <div
        class="drawer-title flex align-center"
      >
        <div
          class="drawer-title-text flex gaps align-center"
        >
          Chart: a galaxy far far away/a name
          <i
            class="Icon material interactive focusable"
            id="tooltip_target_3"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="content_copy"
            >
              content_copy
            </span>
            <div />
          </i>
        </div>
        <i
          class="Icon material interactive focusable"
          id="tooltip_target_4"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="close"
          >
            close
          </span>
          <div />
        </i>
      </div>
      <div
        class="drawer-content flex column box grow"
      >
        <div
          class="box grow"
        >
          <div
            class="introduction flex align-flex-start"
          >
            <img
              class="intro-logo"
              src=""
            />
            <div
              class="intro-contents box grow"
            >
              <div
                class="description flex align-center justify-space-between"
                data-testid="selected-chart-description"
              >
                
                <button
                  class="Button primary"
                  type="button"
                >
                  Install
                </button>
              </div>
              <div
                class="DrawerItem version"
              >
                <span
                  class="name"
                >
                  Version
                </span>
                <span
                  class="value"
                >
                  <div
                    class="Select theme-outlined css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-chart-version-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-1s2u09g-control"
                    >
                      <div
                        class="Select__value-container Select__value-container--has-value css-319lph-ValueContainer"
                      >
                        <div
                          class="Select__single-value css-qc6sy-singleValue"
                        >
                          1
                        </div>
                        <div
                          class="Select__input-container css-6j8wv5-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="chart-version-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
              <div
                class="DrawerItem"
              >
                <span
                  class="name"
                >
                  Home
                </span>
                <span
                  class="value"
                >
                  <a
                    rel="noreferrer"
                    target="_blank"
                  />
                </span>
              </div>
              <div
                class="DrawerItem maintainers"
              >
                <span
                  class="name"
                >
                  Maintainers
                </span>
                <span
                  class="value"
                />
              </div>
            </div>
          </div>
          <div
            class="chart-description"
            data-testid="helmchart-readme"
          >
            <div
              class="MarkDownViewer"
            >
              <p>
                I am a readme
              </p>
              

            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ResizingAnchor horizontal leading"
    />
  </div>
</body>
`;

exports[`<HelmChartDetails /> before getChartDetails resolves with getChartDetails rejects renders 1`] = `
<body>
  <div>
    <div
      class="Notifications flex column align-flex-end"
    >
      <div
        class="Animate opacity notification flex error enter"
        style="--enter-duration: 100ms; --leave-duration: 100ms;"
      >
        <div
          class="box"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="info_outline"
            >
              info_outline
            </span>
          </i>
        </div>
        <div
          class="message box grow"
        >
          Error: some error
        </div>
        <div
          class="box"
        >
          <i
            class="Icon close material interactive focusable"
            data-testid="close-notification-for-notification_20"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="close"
            >
              close
            </span>
          </i>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Animate slide-right Drawer HelmChartDetails right enter"
    style="--size: 725px; --enter-duration: 100ms; --leave-duration: 100ms;"
  >
    <div
      class="drawer-wrapper flex column"
    >
      <div
        class="drawer-title flex align-center"
      >
        <div
          class="drawer-title-text flex gaps align-center"
        >
          Chart: a galaxy far far away/a name
          <i
            class="Icon material interactive focusable"
            id="tooltip_target_18"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="content_copy"
            >
              content_copy
            </span>
            <div />
          </i>
        </div>
        <i
          class="Icon material interactive focusable"
          id="tooltip_target_19"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="close"
          >
            close
          </span>
          <div />
        </i>
      </div>
      <div
        class="drawer-content flex column box grow"
      >
        <div
          class="Spinner singleColor center"
        />
      </div>
    </div>
    <div
      class="ResizingAnchor horizontal leading"
    />
  </div>
</body>
`;
